packages/web/src/components/other/page_not_found.css
.page-not-found {
    background: linear-gradient(rgb(21, 76, 121), rgb(118, 181, 197));
    height: 100vh;
    width: 100vw;
    font-family: 'Poppins';
}
.page-not-found-logo {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin-right: 2px;
    padding-top: 0.7%;
}
.page-not-found-logo p {
    margin-bottom: 0px !important;
    color: #fff;
    font-size: 1.5rem;
    font-weight: 500;
    margin-left: 0.5%;
    cursor: pointer;
}
.page-not-found-logo img {
    width: 8vh;
    cursor: pointer;
}
.background-not-found {
    display: flex;
    justify-content: center;
    margin-top: 6%;
    padding-left: 11%;
    padding-right: 11%;
}
.hubzie-UFO-image {
    display: flex;
    justify-content: center;
    width: 55%;
    justify-content: end;
}
.hubzie-UFO-image img {
    width: 30vw;
    height: auto;
}
.page-not-found-text {
    margin-top: -2%;
    justify-content: center;
    display: flex;
    flex-direction: column;
    margin-right: -5%;
}

.button-404 {
    width: fit-content;
    color: white;
    align-items: center;
    display: flex;
    border-radius: 50px;
    border: none;
    font-size: 1.2rem;
    font-weight: 600;
    padding: 2% 8% 2% 8%;
    background-size: 300% 100%;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-image: linear-gradient(
        to right,
        #32baf4,
        #467edd,
        #3f86ed,
        #47acdf,
        #24cc8e
    );
    box-shadow: 0 2px 10px 0 rgb(70, 126, 221);
}

.button-404:hover {
    background-position: 100% 0;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

@keyframes button-404 {
    0% {
        background-position: 0% 10%;
    }
    50% {
        background-position: 100% 50%;
    }
    1000% {
        background-position: 0% 50%;
    }
}

.heading-text-404 {
    color: white;
    margin-right: 5%;
    font-size: 10em;
}
.paragraph-404 {
    width: 80%;
    color: white;
    font-size: 1.2em;
}
.mid-heading-404 {
    margin-top: -2rem;
    color: white;
    font-size: 2.8em;
}

@media only screen and (max-width: 1000px) {
    .page-not-found-logo img {
        width: 6vh;
    }
    .page-not-found {
        overflow: hidden;
        position: fixed;
    }
    .background-not-found {
        margin-top: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 75vh;
        flex-direction: column-reverse;
    }
    .hubzie-UFO-image {
        width: 100%;
        justify-content: center;
        margin-top: 11%;
        margin-bottom: 4%;
    }
    .page-not-found-text {
        width: 100%;
        justify-content: center;
    }
    .heading-text-404 {
        margin-right: 0;
        font-size: 7em;
        justify-content: center;
        display: flex;
    }
    .mid-heading-404 {
        font-size: 1.6em;
        justify-content: center;
        display: flex;
    }
    .paragraph-404 {
        font-size: 1em;
        align-self: center;
        display: flex;
        text-align: -webkit-center;
        width: initial;
        margin-top: 2%;
        margin-right: 3%;
    }
    .button-404 {
        margin-top: 2%;
        display: flex;
        align-self: center;
    }
    .page-not-found-logo {
        padding-top: 3%;
        height: 10vh;
    }

    .hubzie-UFO-image img {
        width: auto;
        height: 35vh;
    }
    .page-not-found-logo p {
        font-size: 1.25rem;
    }
}

@media only screen and (max-width: 300px) {
    .hubzie-UFO-image img {
        width: 60vw;
        height: auto;
    }
}

